# DSFNet-based-Indoor-Nvigation

./: README.md
DSFNet/: config.py  run_train.sh  sscMetrics.py
DSFNet/models/: AICNet.py  DDR.py  DDRNet.py  projection_layer.py  visual.py
DSFNet/utils/: seed.py
github-version/dataloaders/: __init__.py
github-version/models/: DDR.py  DDRNet.py  __init__.py
src/: getbos.py
src/ModelBoundingBoxPlugin/: CMakeLists.txt  ModelBoundingBoxPlugin.cpp
src/gazebo_odom_broadcaster/: CMakeLists.txt  package.xml
src/gazebo_odom_broadcaster/scripts/: odom_broadcaster.py
src/ply_publisher/: CMakeLists.txt  package.xml
src/ply_publisher/src/: path_publisher.py  ply_publisher.cpp
src/unitree_slam_nav/: CMakeLists.txt  package.xml
src/unitree_slam_nav/config/: global_costmap.yaml  local_costmap.yaml
src/unitree_slam_nav/launch/: move_base.launch  slam_gmapping.launch
src/unitree_ssc_navigation/: .gitignore  CMakeLists.txt  LICENSE  QUICK_START_CN.md  README.md  README_CN.md  package.xml
src/unitree_ssc_navigation/config/: camera_params.yaml  go2_semantic_nav.rviz
src/unitree_ssc_navigation/launch/: go2_semantic_navigation_sim.launch  test_dsfnet.launch  unitree_ssc_navigation.launch
src/unitree_ssc_navigation/msg/: SemanticPointCloud.msg  SemanticVoxel.msg  SemanticVoxelGrid.msg
src/unitree_ssc_navigation/scripts/: check_dependencies.py  cmd_converter.py  dsfnet_inference_node.py  quick_start.sh  ssc_to_planner_bridge.py  start_go2_sim.sh  unitree_odom_bridge.py
src/unitree_ssc_navigation/worlds/: indoor_scene.world  small_house.world
(+29 files in other folders)
